--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"name": "keboola-api",
 	"version": "0.0.1",
 	"description": "This is a boilerplate of an Apify actor.",
+	"type": "module",
 	"dependencies": {
 		"apify": "^2.0.7",
+		"dotenv": "^10.0.0",
 		"got-scraping": "^3.2.3"
 	},
 	"devDependencies": {
